@@ -1,3 +1,10 @@
+2009-01-04  Gabor Csardi  <csardi@szaffi>
+
+	* interfaces/R/igraph/R/scg_spectral_coarse_graining.R 
+	(scg.matrix) : not autogenerated anymore, no changes yet though
+	* interfaces/R/src/rinterface.c.in (R_igraph_scg_matrix) : 
+	the same applies to this one
+
 2008-11-14  Gabor Csardi  <csardi@szaffi>
 
 	* interfaces/R/igraph/R/plot.R (igraph.Arrows) : handle 
